# analytics

./: README.md  dashboard.json  fake.py  pyproject.toml  test.htm
app/: app.py  database.py  models.py  schemes.py  settings.py  utils.py
static/: track.js
