[tool.poetry]
name = "analytics"
version = "0.1.0"
description = ""
authors = ["meirdev <maornet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ip2location = "^8.9.0"
ua-parser = "^0.16.1"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
faker = "^16.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
